--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 		<p>click thumb to change pieces!</p>
 		<nav id="buttonHolder">
 			<h3 class="hidden">Select Image</h3>
-			<img data-puzzleref="0" src="images/buttonZero.jpg" alt="thumbnail" class="thumbnail-image">
-			<img data-puzzleref="1" src="images/buttonOne.jpg" alt="thumbnail" class="thumbnail-image">
-	    <img data-puzzleref="2" src="images/buttonTwo.jpg" alt="thumbnail" class="thumbnail-image">
-			<img data-puzzleref="3" src="images/buttonThree.jpg" alt="thumbnail" class="thumbnail-image">
+			<img data-puzzleref="0" src="images/buttonZero.jpg" alt="thumbnail" >
+			<img data-puzzleref="1" src="images/buttonOne.jpg" alt="thumbnail" >
+	    <img data-puzzleref="2" src="images/buttonTwo.jpg" alt="thumbnail" >
+			<img data-puzzleref="3" src="images/buttonThree.jpg" alt="thumbnail" >
 		</nav>
 	</footer>
 
